# dice

./: README.md  pyproject.toml
src/dice/: dice.py
