[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "dicesim"
version = "0.0.1"
authors = [
  { name="zhou20120904", email="zhou20120904@126.com" },
]
description = "A dice simulator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
